--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<meta property="og:image" content="https://playnite.link/social_image.jpg" />
 	<meta name="description" content="Video game library manager with one simple goal: To provide a unified interface for all of your games.">
 	<meta name="author" content="Playnite">
+    <meta name="theme-color" content="#161A1F">
 
 	<link rel="stylesheet" type="text/css" href="css/style2.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
