--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="addon-container">
         <div class="addon">
             <div class="addon-info">
-                <h2 class="addon-title">Extend & Customize Playnite with Add-ons</h2>
+                <h2 class="addon-title">Extend & Customize Playnite with <nobr>Add-ons</nobr></h2>
                 <p class="addon-text">Add-ons can integrate with your game libraries and metadata sources, while also providing a range of additional features.</p>
                 <p class="addon-text">Whether you're looking to change Playnite's appearance, modify its layout, or adjust its functionality, Add-ons tailor Playnite to your unique preferences.</p>
             </div>
