--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
                 </ul>
             </nav>
             <div class="social">
-                <a href="https://playnite.link/">
+                <a href="https://discord.gg/BrtABqe">
                     <img src="img/s-discord.svg"></a>
                 </a>
-                <a href="https://playnite.link/">
+                <a href="https://www.reddit.com/r/playnite/">
                     <img src="img/s-reddit.svg">
                 </a>
-                <a href="https://playnite.link/">
+                <a href="https://twitter.com/AppPlaynite">
                     <img src="img/s-twitter.svg">
                 </a>
-                <a href="https://playnite.link/">
+                <a href="https://www.patreon.com/playnite">
                     <img src="img/s-patreon.svg">
                 </a>
             </div>
