--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 </div>
             </div>
         </div>
-        <a href="" class="button">More F.A.Q.</a>
+        <a href="https://github.com/JosefNemec/Playnite/wiki/Frequently-Asked-Questions" class="button">More F.A.Q.</a>
     </div>
 
     <!-- Swiper JS -->
